<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGlobal" android:orientation="vertical" tools:context=".AddTrocActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="245dp"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/imageView20"
            android:layout_width="219dp" android:layout_height="match_parent"
            android:layout_margin="5dp" android:layout_weight="1" android:background="@color/Colorblanc"
        app:srcCompat="@drawable/ic_launcher_foreground"
        tools:ignore="VectorDrawableCompat" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <Button
                android:id="@+id/idPrendrePhoto"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" android:layout_margin="5dp"
                android:layout_weight="1" android:background="@color/ColorOrange" android:text="@string/camera"
                android:textColor="@color/Colorblanc" tools:ignore="ButtonStyle,NestedWeights"/>
            <Button
                android:id="@+id/idfileImage"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" android:layout_margin="5dp"
                android:layout_weight="1" android:background="@color/ColorOrange" android:text="@string/fichier"
                android:textColor="@color/Colorblanc" tools:ignore="ButtonStyle"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="237dp"
        android:background="@color/Colorblanc" android:orientation="vertical">
        <EditText
            android:id="@+id/idEditTitreDuTroc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/type_d_objet" android:textColor="@color/ColorNoir" android:autofillHints=""
            tools:ignore="LabelFor"/>
        <EditText
            android:id="@+id/idEditDescription"
            android:layout_width="match_parent"
            android:layout_height="145dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/d_crivez_le_produit" android:textColor="@color/ColorNoir" android:autofillHints=""/>
        <EditText
            android:id="@+id/idEditEtat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/l_tat_du_produit" android:textColor="@color/ColorNoir" android:autofillHints=""/>
    </LinearLayout>
</LinearLayout>