<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="wrap_content" android:background="@drawable/borderbottom" android:orientation="vertical">

    <TextView
        android:id="@+id/typeTroc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:background="@color/ColorVert"
        android:padding="8dp" android:text="@string/type"
        android:textColor="@color/ColorNoir" android:textSize="18sp" android:textStyle="bold"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/borderbottom">
        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="153dp" android:layout_height="153dp"
            android:contentDescription="TODO"
            app:srcCompat="@drawable/chaise" tools:ignore="ContentDescription,HardcodedText"/>
        <TextView
            android:id="@+id/trocDescription"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/Colorblanc"
            android:padding="8dp"
            android:text="@string/description" android:textAlignment="textStart"
            android:textColor="@color/ColorNoir"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/Colorblanc" android:orientation="horizontal">
        <TextView
            android:id="@+id/trocEtat"
            android:layout_width="153dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="100dp"
            android:background="@color/Colorblanc"
            android:padding="8dp"
            android:text="@string/etat" android:textColor="@color/ColorNoir" android:textStyle="bold"
            tools:ignore="RtlSymmetry"/>
        <CheckBox
            android:id="@+id/idsuppspecifique"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/Colorblanc" android:text="@string/supp"/>
    </LinearLayout>
</LinearLayout>
