<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#69B578" tools:context="com.example.myapplicationtroc.MainActivity">

    <LinearLayout
        android:id="@+id/idLayoutVerticale"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:layout_gravity="center_vertical"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:backgroundTint="?android:attr/panelBackground" android:orientation="vertical">
        <EditText
            android:id="@+id/idNom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp" android:background="@color/colorPrimaryPEARL"
            android:ems="10" android:inputType="textEmailAddress"
            android:text="Votre nom" android:textAlignment="center" android:textStyle="bold"/>
        <EditText
            android:id="@+id/idPrenom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="24dp" android:layout_marginRight="24dp"
            android:background="@color/colorPrimaryPEARL"
            android:ems="10" android:inputType="textPassword"
            android:text="Votre prenom" android:textAlignment="center"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/idMotDePasse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="24dp" android:layout_marginRight="24dp"
            android:background="@color/colorPrimaryPEARL"
            android:ems="10" android:inputType="textPassword"
            android:text="@string/un_mot_de_passe" android:textAlignment="center"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/idMotDePasseConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="24dp" android:layout_marginRight="24dp"
            android:background="@color/colorPrimaryPEARL"
            android:ems="10" android:inputType="textPassword"
            android:text="@string/une_deuxieme_fois_votre_mot_de_passe" android:textAlignment="center"
            android:textStyle="bold"/>
        <Button
            android:id="@+id/idButtonValidationInscription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_gravity="center" android:layout_marginTop="24dp"
            android:text="@string/validez"/>
    </LinearLayout>
</LinearLayout>